--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,9 @@
                         <a class="dropdown-item" href="{% url 'oracion_add' %}">Nuevo</a>
                     </div>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'about' %}">Acerca de</a>
+                </li>
             </ul>
         </div>
     </nav>
